# timeseries_analysis

./: .coverage  .gitignore  .readthedocs.yaml  2D-main-old.py  2D-main.py  LICENCE  LICENSE  README.md  add_colors.sh  classes.py  data_correction.py  data_directory.txt  discrete_descriptors.py  extract.py  final_states.txt  final_thresholds.txt  functions.py  input_parameters.txt  justfile  main-old.py  main.py  main_2d.py  main_v1.py  main_v2.py  new_main.py  old_functions.py  onion_clustering_log.txt  pyproject.toml  second_derivative.py  tmp_test_script.sh
docs/source/: conf.py  index.rst  modules.rst  onion_clustering.rst
docs/source/_templates/: function.rst
examples/: data_directory.txt  example_plots.py  example_script.py  example_script_2d.py  example_script_multi.py  example_script_uni.py  input_parameters.txt
src/onion/: __init__.py  __version__.py  main.py
src/onion_clustering/: __init__.py  __version__.py  _param_validation.py  classes.py  first_classes.py  functions.py  main.py  main_2d.py  onion_clustering.py  onion_clustering.rst  onion_multi.py  onion_uni.py  utilities.py
src/onion_clustering.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/onion_clustering/_internal/: classes.py  first_classes.py  functions.py  main.py  main_2d.py  utilities.py
test/: all_labels.npy  data_directory.txt  final_states.txt  fraction_0.txt  input_parameters.txt  log_multi.txt  log_uni.txt  medoid_center.npy  number_of_states.txt  run_test.sh  states_output.txt  test_multi.py  test_uni.py
test/output_multi/: final_states.txt  fraction_0.txt  labels.npy  number_of_states.txt  time_res_analysis.txt
test/output_uni/: final_states.txt  fraction_0.txt  labels.npy  number_of_states.txt  time_res_analysis.txt
test/test_multi/: RUN_TEST.sh  states_output.txt
test/test_uni/: RUN_TEST.sh  fraction_0.txt  input_parameters.txt
test/tmp/: final_states.txt  final_thresholds.txt  onion_clustering_log.txt  tmp.py
test_multi/: RUN_TEST.sh  data_directory.txt  final_states.txt  fraction_0.txt  input_parameters.txt  number_of_states.txt  states_output.txt
test_uni/: RUN_TEST.sh  data_directory.txt  final_states.txt  final_thresholds.txt  fraction_0.txt  input_parameters.txt  number_of_states.txt  states_output.txt
tmp_check_estimator/: check_estimator.py  onion_clustering_log.txt
